# simple-smtp-mailer

./: .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md  ROADMAP_CHECKLIST.md  project-config.conf  ssmtp-mailer.code-workspace  test_api_integration.cpp  test_smtp_setup.cpp
automation/ansible/: README-REMOTE-BUILD.md  ansible.cfg  inventory-vmware.ini  inventory.ini  playbook-build.yml  playbook.yml
automation/ansible/docs/: QUICK-START-macos-build-user.md  README-REMOTE-BUILD.md  setup-macos-build-user.md
automation/ansible/scripts/: collect-packages.sh  organize-packages.sh  remote-build.sh
automation/ci/: .travis.yml  Jenkinsfile
automation/docker/: Dockerfile  docker-compose.yml
automation/vagrant/: Vagrantfile
config/conf.d/: 01-defaults.conf.example  10-domains.conf.example  20-users.conf.example  30-address-mapping.conf.example  50-logging.conf.example
config/domains/: domain1.com.service-account.conf.example  domain2.com.conf.example  dreamlikelabs.com.conf.example  mailer.dreamlikelabs.com.conf.example
config/mappings/: relay-mappings.conf.example
config/users/: mail-relay@dreamlikelabs.com.conf.example  user@domain2.com.conf.example
deployment/launchd/: com.simple-smtp-mailer.simple-smtp-mailer.plist
deployment/systemd/: simple-smtp-mailer.service
deployment/windows/: simple-smtp-mailer.service
docs/: CLI_README.md  README.md  RELEASE_NOTES_v0.2.0.md  dns-setup.md  relay-architecture.md  relay-setup-guide.md
docs/api/: README.md  advanced_features.md  new_oauth2_integrations.md
docs/configuration/: dns-setup.md  json-logging-example.conf  relay-architecture.md  relay-setup-guide.md  service-account-setup-guide.md  ssl-quick-reference.md  ssl-setup-with-certbot.md
docs/development/: ansible-remote-build.md  build-scripts.md  linux-build.md  macos-build.md  testing-framework.md  windows-build.md
docs/diagrams/: README.md  architecture.md  flow.md
docs/features/: analytics-reporting.md  daemon-mode.md  json-logging.md
docs/getting-started/: README.md  prerequisites.md  quick-start.md
docs/installation/: README.md  README_CENTOS_FEDORA_REPO.md  linux.md  macos.md  windows.md
docs/oauth2/: README.md  gmail-oauth2-setup.md  oauth2-helper-tools.md  oauth2-overview.md  oauth2-security.md  oauth2-troubleshooting.md  office365-oauth2-setup.md  sendgrid-oauth2-setup.md  token-management.md  token-security.md
examples/: json_logging_example.cpp
include/simple-smtp-mailer/: analytics_simple.hpp  api_client.hpp  cli_commands.hpp  daemon.hpp  json_logger.hpp  token_manager.hpp  webhook_handler.hpp
packaging/: CMakeLists.cpack  README.md
packaging/assets/: conclusion.html  readme.html  welcome.html
packaging/assets/icons/: README.md
packaging/assets/licenses/: README.md
packaging/linux/deb/: control  postinst  postrm  prerm
packaging/linux/rpm/: postinstall.sh  postuninstall.sh  preinstall.sh  preuninstall.sh  simple-smtp-mailer.spec  {PROJECT_NAME}.spec
packaging/macos/dmg/: create-dmg.sh  install.sh  setup-dsstore.sh
packaging/macos/pkg/: Distribution.xml  PackageInfo.xml
packaging/macos/pkg/scripts/: postinstall
packaging/windows/msi/: installer.wxs
packaging/windows/nsis/: installer.nsi
project/: API_IMPLEMENTATION_SUMMARY.md  CENTRALIZED_RELEASE_WORKFLOW.md  FEATURE_AUDIT.md  IMPLEMENTATION_SUMMARY.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  ROADMAP.md  ROADMAP_CHECKLIST.md  TECHNICAL_DEBT.md
scripts/: centralized-release.sh
src/: main.cpp
src/core/analytics/: analytics_simple.cpp
src/core/api/: amazon_ses_api_client.cpp  api_client_factory.cpp  fastmail_api_client.cpp  mailgun_api_client.cpp  mailjet_api_client.cpp  postmark_api_client.cpp  protonmail_api_client.cpp  sendgrid_api_client.cpp  sparkpost_api_client.cpp  zoho_mail_api_client.cpp
src/core/cli/: api_commands.cpp  cli_manager.cpp  config_commands.cpp  template_commands.cpp  validation_commands.cpp
src/core/config/: config_manager.hpp
src/core/daemon/: daemon.cpp
src/core/http/: http_client.cpp
src/core/logging/: json_logger.cpp  json_logger.hpp  logger.cpp  logger.hpp
src/core/queue/: email_queue.cpp  email_queue.hpp
src/core/template/: template_engines.cpp  template_manager.cpp
src/core/token_manager/: token_manager.cpp
src/core/unified/: unified_mailer.cpp
src/core/webhook/: webhook_handlers.cpp  webhook_processor.cpp
src/tests/: CMakeLists.txt  test_all_providers.cpp  test_api_client.cpp  test_main.cpp
tests/: CMakeLists.txt  test_all_providers.cpp  test_amazon_ses_integration.cpp  test_analytics_simple.cpp  test_api_client.cpp  test_basic.cpp  test_config_manager.cpp  test_email_queue.cpp  test_http_client.cpp  test_json_logging.cpp  test_mailgun_integration.cpp  test_mailjet_integration.cpp  test_main.cpp  test_postmark_integration.cpp  test_sendgrid_integration.cpp  test_smtp_client.cpp  test_smtp_setup.cpp  test_sparkpost_integration.cpp  test_template_management.cpp  test_token_manager.cpp  test_unified_mailer.cpp  test_webhook_processing.cpp
